[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cronbeats-python"
version = "0.1.0"
description = "Official CronBeats Ping SDK for Python."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "CronBeats" }]
dependencies = []
keywords = ["cronbeats", "cron", "monitoring", "sdk", "ping"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/cronbeats/cronbeats-python"
Repository = "https://github.com/cronbeats/cronbeats-python"
Issues = "https://github.com/cronbeats/cronbeats-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
