[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cronbeats-python"
version = "0.1.1"
description = "Cron job monitoring and heartbeat monitoring SDK for Python. Monitor scheduled tasks, background jobs, and cron jobs with simple ping telemetry. Get alerts when cron jobs fail, miss their schedule, or run too long."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "CronBeats" }]
dependencies = []
keywords = [
  "cron",
  "monitoring",
  "cron monitoring",
  "cron job monitoring",
  "heartbeat",
  "heartbeat monitoring",
  "ping",
  "ping telemetry",
  "scheduler",
  "scheduled tasks",
  "background jobs",
  "job monitoring",
  "alerting",
  "cron alerts",
  "devops",
  "cronbeats",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/cronbeats/cronbeats-python"
Repository = "https://github.com/cronbeats/cronbeats-python"
Issues = "https://github.com/cronbeats/cronbeats-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
